--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "YOUR-PROJECT-NAME-HERE",
-  "description": "YOUR PROJECT DESCRIPTION HERE",
-  "author": "YOUR NAME <your@emailaddress.com>",
+  "name": "ProduccionServer",
+  "description": "Planifikazioa antolatzeko aplikazioa",
+  "author": "ikerib@gmail.com>",
   "version": "0.0.1",
   "dependencies": {
     "connect": "1.8.5",
@@ -9,7 +9,8 @@
     "jade": "0.20.0",
     "mongoose": "2.4.8",
     "socket.io": "0.8.7",
-    "fs": "0.10.28"
+    "fs": "0.10.28",
+    "mysql": "2.3.1"
   },
   "devDependencies": {
     "vows": "0.5.x",
