--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "jade": "0.20.0",
     "mongoose": "2.4.8",
     "socket.io": "0.8.7",
-    "fs": "0.10.28"
+    "fs": "0.10.28",
+    "moment": "^2.6.0"
   },
   "devDependencies": {
     "vows": "0.5.x",
-	"mocha": "*",
-	"should": "*"
+    "mocha": "*",
+    "should": "*"
   },
   "engine": "node >= 0.6.6"
 }
