--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongoose": "2.4.8",
     "socket.io": "1.0",
     "fs": "0.10.28",
-    "moment": "^2.6.0"
+    "moment": "^2.6.0",
+    "async": "0.9.0"
   },
   "devDependencies": {
     "vows": "0.5.x",
