--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "socket.io": "1.0",
     "fs": "0.10.28",
     "moment": "^2.6.0",
-    "async": "0.9.0"
+    "async-foreach": "0.1.3",
+    "httpsync": "0.0.8"
   },
   "devDependencies": {
     "vows": "0.5.x",
